<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2026 CNM Ingenuity, Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/activity_horizontal_margin">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/settings_title"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:text="@string/settings_sort_by"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
      android:id="@+id/sort_by_group"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      app:selectionRequired="true"
      app:singleSelection="true">

      <com.google.android.material.button.MaterialButton
        android:id="@+id/sort_by_date_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/settings_sort_field_date_created"/>

      <com.google.android.material.button.MaterialButton
        android:id="@+id/sort_by_breed_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/settings_sort_field_breed_name"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:text="@string/settings_sort_direction"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
      android:id="@+id/sort_direction_group"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      app:selectionRequired="true"
      app:singleSelection="true">

      <com.google.android.material.button.MaterialButton
        android:id="@+id/sort_direction_desc_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/settings_sort_direction_descending"/>

      <com.google.android.material.button.MaterialButton
        android:id="@+id/sort_direction_asc_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/settings_sort_direction_ascending"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:text="@string/settings_gallery_columns"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
      android:id="@+id/gallery_columns_group"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      app:selectionRequired="true"
      app:singleSelection="true">

      <com.google.android.material.button.MaterialButton
        android:id="@+id/gallery_columns_2_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/settings_gallery_columns_2"/>

      <com.google.android.material.button.MaterialButton
        android:id="@+id/gallery_columns_3_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/settings_gallery_columns_3"/>

      <com.google.android.material.button.MaterialButton
        android:id="@+id/gallery_columns_4_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/settings_gallery_columns_4"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButton
      android:id="@+id/logout_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="32dp"
      android:layout_marginBottom="@dimen/activity_vertical_margin"
      android:text="@string/logout_action"/>

  </LinearLayout>

</ScrollView>
