<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2026 CNM Ingenuity, Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<navigation
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/nav_graph"
  app:startDestination="@id/loginFragment">

  <fragment
    android:id="@+id/loginFragment"
    android:name="edu.cnm.deepdive.doggoneit.ui.LoginFragment"
    android:label="@string/login_title">
    <action
      android:id="@+id/action_loginFragment_to_homeFragment"
      app:destination="@id/homeFragment"
      app:popUpTo="@id/loginFragment"
      app:popUpToInclusive="true"/>
  </fragment>

  <fragment
    android:id="@+id/homeFragment"
    android:name="edu.cnm.deepdive.doggoneit.ui.HomeFragment"
    android:label="@string/home_title">
    <action
      android:id="@+id/action_homeFragment_to_photoCaptureFragment"
      app:destination="@id/photoCaptureFragment"/>
    <action
      android:id="@+id/action_homeFragment_to_cameraGalleryFragment"
      app:destination="@id/cameraGalleryFragment"/>
    <action
      android:id="@+id/action_homeFragment_to_scansGalleryFragment"
      app:destination="@id/scansGalleryFragment"/>
  </fragment>

  <fragment
    android:id="@+id/photoCaptureFragment"
    android:name="edu.cnm.deepdive.doggoneit.ui.PhotoCaptureFragment"
    android:label="@string/photo_capture_title">
    <action
      android:id="@+id/action_photoCaptureFragment_to_scanAnalysisFragment"
      app:destination="@id/scanAnalysisFragment"/>
  </fragment>

  <fragment
    android:id="@+id/scanAnalysisFragment"
    android:name="edu.cnm.deepdive.doggoneit.ui.ScanAnalysisFragment"
    android:label="@string/scan_analysis_title">
    <action
      android:id="@+id/action_scanAnalysisFragment_to_scanDisplayFragment"
      app:destination="@id/scanDisplayFragment"/>
  </fragment>

  <fragment
    android:id="@+id/cameraGalleryFragment"
    android:name="edu.cnm.deepdive.doggoneit.ui.CameraGalleryFragment"
    android:label="@string/camera_gallery_title">
    <action
      android:id="@+id/action_cameraGalleryFragment_to_scanAnalysisFragment"
      app:destination="@id/scanAnalysisFragment"/>
  </fragment>

  <fragment
    android:id="@+id/scansGalleryFragment"
    android:name="edu.cnm.deepdive.doggoneit.ui.ScansGalleryFragment"
    android:label="@string/scans_gallery_title">
    <action
      android:id="@+id/action_scansGalleryFragment_to_scanDisplayFragment"
      app:destination="@id/scanDisplayFragment"/>
  </fragment>

  <fragment
    android:id="@+id/settingsFragment"
    android:name="edu.cnm.deepdive.doggoneit.ui.SettingsFragment"
    android:label="@string/settings_title"/>

  <fragment
    android:id="@+id/scanDisplayFragment"
    android:name="edu.cnm.deepdive.doggoneit.ui.ScanDisplayFragment"
    android:label="@string/scan_display_title"/>

</navigation>
