<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2026 CNM Ingenuity, Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="@dimen/activity_horizontal_margin">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/scans_gallery_sort_by"/>

    <Spinner
      android:id="@+id/sort_field_spinner"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_weight="1"/>

    <Spinner
      android:id="@+id/sort_direction_spinner"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_weight="1"/>

  </LinearLayout>

  <EditText
    android:id="@+id/filter_input"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:hint="@string/scans_gallery_filter_hint"
    android:imeOptions="actionDone"
    android:inputType="text"
    android:maxLines="1"/>

  <CheckBox
    android:id="@+id/favorites_only_checkbox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/scans_gallery_favorites_only"/>

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="8dp"
    android:layout_weight="1">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/saved_scans_grid"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clipToPadding="false"
      android:paddingBottom="@dimen/activity_vertical_margin"
      app:spanCount="3"/>

    <TextView
      android:id="@+id/empty_gallery_message"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:gravity="center"
      android:text="@string/scans_gallery_empty"
      android:textAppearance="?attr/textAppearanceBodyLarge"
      android:visibility="gone"/>

  </FrameLayout>

</LinearLayout>
